# dezc-capstone-311-chicago-sr

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  DASHBOARDS.md  DATA_MODELING.md  Makefile  README.md  docker-compose.yml  files.Dockerfile  pyproject.toml
flows/: __init__.py  chicago_pipeline.py
flows/tasks/: __init__.py  bigquery_ingestion.py  ingestion.py
flows/tests/: conftest.py  test_pipeline.py
infra/: .gitignore  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
shiny-dashboards/: operational_dashboard.py  sla_dashboard.py
transform/: .gitignore  .user.yml  catalogs.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml.template
transform/macros/: calculate_business_days.sql  create_schema_if_not_exists.sql  generate_schema_name.sql
transform/macros/soft_delete/: add_metadata.sql  apply_soft_delete.sql
transform/models/dimensions/: _dimensions.yml  dim_date.sql  dim_department.sql  dim_geography.sql  dim_request_type.sql  dim_status.sql
transform/models/facts/: _facts.yml  fct_service_requests.sql  fct_sla_performance.sql
transform/models/marts/: _marts.yml  mart_operational.sql  mart_sla_performance.sql
transform/models/marts/core/: fct_service_requests.sql
transform/models/marts/operations/: mart_operational_dashboard.sql
transform/models/staging/: _sources.yml  _stg_service_requests.yml  sources.yml  stg_service_requests.sql
transform/seeds/: community_areas.csv  department_metadata.csv  properties.yml  sla_targets.csv
