[project]
name = "chicago-311-pipeline"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "pyarrow>=14.0.0",
    "polars>=1.0.0",
    # We use 'gcsfs' for storage, 'pyarrow' for the data layer, and 'sql-postgres' for the catalog
    "pyiceberg[gcsfs,pyarrow,sql-postgres]>=0.11.1",
    "psycopg2-binary>=2.9.0",  # Required database driver for PostgreSQL (not included by pyiceberg[sql-postgres])
    "sodapy>=2.2.0",
    "python-dotenv>=1.0.0",  # Load environment variables from .env file
    "prefect>=3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]
