[project]
name = "chicago-311-pipeline"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "pyarrow>=14.0.0",
    "polars>=1.0.0",
    # BigQuery for Iceberg/BigLake operations
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-storage>=2.18.0",
    # Socrata API client
    "sodapy>=2.2.0",
    "python-dotenv>=1.0.0", # Load environment variables from .env file
    "prefect>=3.0.0",
    "dbt-bigquery>=1.11.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]
