[project]
name = "chicago-311-pipeline"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "pyarrow>=14.0.0",
    "polars>=1.0.0",
    # BigQuery for Iceberg/BigLake operations
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-storage>=2.18.0",
    # Socrata API client
    "sodapy>=2.2.0",
    "python-dotenv>=1.0.0", # Load environment variables from .env file
    "prefect>=3.0.0",
    "dbt-bigquery>=1.11.1",
    "shiny>=1.6.0",
    "plotly>=6.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "RUF001", # ambiguous unicode character — too many false positives
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["flows/tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
